--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic,cyrillic-ext" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="src/core/owl-carousel/owl.carousel.css"/>
+    <link rel="stylesheet" type="text/css" href="src/core/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="src/core/slick/slick-theme.css"/>
     <link rel='stylesheet' href='dist/style.css'/>
 </head>
 <body>
@@ -15,7 +17,9 @@
         <div class="head">
             <div class="logocation">
                 <div class="logo">
-                    <img src="src/img/logo.png" alt="">
+                    <div class="footer_column-info_social-image_con">
+                        <img src="src/img/logo.png" alt="">
+                    </div>
                 </div>
                 <div class="location">
                     <select name="location_select" id="location_select">
@@ -509,15 +513,205 @@
             </div>
         </div>
     </section>
+    <section id="works_with">
+        <h4>С нами работают</h4>
+        <div class="works_with slick-slider">
+            <div class="my-item">
+                <img src="src/img/reksoft.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/sarafan_tech.svg" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/docturu.svg" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/robbo.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/volts.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/stafory.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/lavadora.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/droice_labs.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/proaction.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/piligrim.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/braille_glove.png" alt="">
+            </div>
+            <div class="my-item">
+                <img src="src/img/ts_solution.png" alt="">
+            </div>
+        </div>       
+    </section>
     <section id="write_about">
         <h4 class="title">
             О нас пишут и говорят
         </h4>
         <img src="src/img/write_about_us.png" alt="">
     </section>
-
+    <footer>
+        <div class="footer">
+            <div class="footer-row">
+                <div class="footer_column">
+                    <div class="footer_column-info">
+                        <h5 class="footer_column-info_title">GetLooky</h5>
+                        <div class="footer_column-info_elems">
+                            <a href="#write_about" class="footer_column-info_elem">О сервисе</a>
+                            <a href="#write_about" class="footer_column-info_elem">Пресса о нас и отзывы</a>
+                            <a href="#write_about" class="footer_column-info_elem">Медиа-кит</a>
+                            <a href="#write_about" class="footer_column-info_elem">Карьера</a>
+                        </div>
+                    </div>
+                    <a    class="footer_column-button" href="#write_about">Помогите нам стать лучше</a>
+                </div>
+                <div class="footer_column">
+                    <div class="footer_column-info">
+                        <h5 class="footer_column-info_title">Для клиентов</h5>
+                        <div class="footer_column-info_elems">
+                            <a href="#write_about" class="footer_column-info_elem">Арендаторам</a>
+                            <a href="#write_about" class="footer_column-info_elem">Брокерам</a>
+                            <a href="#write_about" class="footer_column-info_elem">Собственникам</a>
+                            <a href="#write_about" class="footer_column-info_elem">Рекламодателям</a>
+                        </div>
+                    </div>
+                    <a    class="footer_column-button" href="#write_about">Добавить объект</a>
+                </div>
+                <div class="footer_column">
+                    <div class="footer_column-info">
+                        <h5 class="footer_column-info_title">Технологии</h5>
+                        <div class="footer_column-info_elems">
+                            <a href="#write_about" class="footer_column-info_elem">Виртуальные 3D-туры</a>
+                            <a href="#write_about" class="footer_column-info_elem">Виртуальные планировки</a>
+                        </div>
+                    </div>
+                    <a    class="footer_column-button" href="#write_about">Заказать 3D-тур</a>
+                </div>
+                <div class="footer_column">
+                    <div class="footer_column-info">
+                        <h5 class="footer_column-info_title">Информация</h5>
+                        <div class="footer_column-info_elems">
+                            <a href="#write_about" class="footer_column-info_elem">Новости</a>
+                            <a href="#write_about" class="footer_column-info_elem">Аналитика</a>
+                        </div>
+                    </div>
+                    <a    class="footer_column-button" href="#write_about">Оформить подписку</a>
+                </div>
+                <div class="footer_column">
+                    <div class="footer_column-info">
+                        <h5 class="footer_column-info_title">Помощь</h5>
+                        <div class="footer_column-info_elems">
+                            <a href="#write_about" class="footer_column-info_elem">Глоссарий</a>
+                            <a href="#write_about" class="footer_column-info_elem">Типовые договоры GetLooky</a>
+                            <a href="#write_about" class="footer_column-info_elem">Частые вопросы и ответы</a>
+                        </div>
+                    </div>
+                    <a    class="footer_column-button" href="#write_about">Задать вопрос</a>
+                </div>
+            </div>
+            <div class="footer-row">
+                    <div class="footer_copyright">
+                        <div class="footer_copyright-logo">
+                            <img src="src/img/getlooky_logo_black.png" alt="">
+                        </div>
+                        <div class="footer_copyright-info">
+                            <h5 class="footer_copyright-info_label">
+                                    © GetLooky LTD, 2015-2016
+                            </h5>
+                            <p class="footer_copyright-info_text">
+                                Информационно-аналитическая платформа<br /> GetLooky.ru помогает найти наилучшее<br/> коммерческое помещение для вашего бизнеса.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="footer_column">
+                        <div class="footer_column-info">
+                            <h5 class="footer_column-info_title">Технологии</h5>
+                            <div class="footer_column-info_elems">
+                                <a href="#write_about" class="footer_column-info_elem">Добавить объект</a>
+                                <a href="#write_about" class="footer_column-info_elem">Личный кабинет</a>
+                                <a href="#write_about" class="footer_column-info_elem">Помощь и тех. поддержка</a>
+                                <a href="#write_about" class="footer_column-info_elem">Условия использования</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer_column footer_column-socials">
+                        <div class="footer_column-socials-info">
+                            <h5 class="footer_column-info_title">Помощь</h5>
+                            <div class="footer_column-info_elems">
+                                <div class="footer_column-info_social">
+                                    <div class="footer_column-info_social-image">
+                                        <img src="src/img/vk.png" alt="">
+                                    </div>
+                                    <a href="" class="footer_column-info_elem">ВКонтакте</a>
+                                </div>
+                                <div class="footer_column-info_social">
+                                    <div class="footer_column-info_social-image">
+                                        <img src="src/img/facebook.png" alt="">
+                                    </div>
+                                    <a href="" class="footer_column-info_elem">Facebook</a>
+                                </div>
+                                <div class="footer_column-info_social">
+                                    <div class="footer_column-info_social-image">
+                                        <img src="src/img/ok.png" alt="">
+                                    </div>
+                                    <a href="" class="footer_column-info_elem">Одноклассники</a>
+                                </div>
+                                <div class="footer_column-info_social">
+                                    <div class="footer_column-info_social-image">
+                                        <img src="src/img/twitter.png" alt="">
+                                    </div>
+                                    <a href="" class="footer_column-info_elem">Twitter</a>
+                                </div>
+                                <div class="footer_column-info_social">
+                                    <div class="footer_column-info_social-image">
+                                        <img src="src/img/google_plus.png" alt="">
+                                    </div>
+                                    <a href="" class="footer_column-info_elem">Google +</a>
+                                </div>
+                                <div class="footer_column-info_social">
+                                    <div class="footer_column-info_social-image">
+                                        <img src="src/img/instagram.png" alt="">
+                                    </div>
+                                    <a href="" class="footer_column-info_elem">Instagram</a>
+                                </div>
+                                <div class="footer_column-info_social">
+                                    <div class="footer_column-info_social-image">
+                                        <img src="src/img/skype.png" alt="">
+                                    </div>
+                                    <a href="" class="footer_column-info_elem">Skype</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer_column footer_column-contacts">
+                        <div class="footer_column-info footer_column-info_contacts">
+                            <h5 class="footer_column-info_title">Контакты</h5>
+                            <div class="footer_column-info_elems footer_column-info_contacts-phone">
+                                <a href="tel: +78125977777" class="footer_column-info_elem footer_column-info_contacts-phone">+7 (812) 597-77-77</a>
+                                <address class="footer_column-info_contacts-address">Россия Санкт-Петербург,<br />Аптекарская наб., 12, оф. 316</address>
+                                <a href="mailto: info@getlooky.ru" class="footer_column-info_elem footer_column-info_contacts-mail">info@getlooky.ru</a>
+                            </div>
+                        </div>
+                        <!-- <div class="footer_column-contacts-mobile_platforms">
+                            <a href="#write_about" class="footer_column-contacts-mobile_platforms-app_store"></a>
+                        </div> -->
+                    </div>
+                </div>
+        </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
     <script src="src/core/owl-carousel/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="src/core/slick/slick.min.js"></script>
     <script type="text/javascript" src="dist/bundle.js"></script>
 </body>
 </html>
